...
import 'package:front_lomba/helpers/route_animation.dart';

class Permissions extends StatelessWidget {
  const Permissions({Key? key}) : super(key: key);

  static const appTitle = 'Lomba';
  static const pageTitle = 'Permisos';

  @override
  Widget build(BuildContext context) {
    return MaterialApp(
      debugShowCheckedModeBanner: false,
      title: '$appTitle - $pageTitle',
...
                      itemName: widget.permission,
                      titleMessage: 'Activar',
                      dialogMessage: '¿Desea activar el permiso?',
                    ),
                  ),
                ).then((value) async {
                  if (value == 'Sí') {
                    final List<dynamic>? respuesta =
                        await permiService.EnableDisable(
                            widget.permission, !widget.habilitado);
                    //consumir servicio de PermissionService

                    if (!respuesta?[2]) {
...
                      ScaffoldMessenger.of(context).showSnackBar(
                          SnackBarGenerator.getNotificationMessage(
                              'Conexión con el servidor no establecido'));
                    } else if (respuesta?[0].statusCode == 200) {
                      ScaffoldMessenger.of(context).showSnackBar(
                          SnackBarGenerator.getNotificationMessage(
                              'Se ha Activado el permiso'));
                    } else if (respuesta?[0].statusCode >= 400 &&
                        respuesta?[0].statusCode <= 400) {
                      if (respuesta?[0].statusCode == 401) {
                        ScaffoldMessenger.of(context).showSnackBar(
                            SnackBarGenerator.getNotificationMessage(
                                'Ocurrió un problema con la autentificación'));
...
                          SnackBarGenerator.getNotificationMessage(
                              'Conexión con el servidor no establecido'));
                    } else if (respuesta?[0].statusCode == 200) {
                      //print('en la alerta !!!!!!!!!!!!!');
                      ScaffoldMessenger.of(context).showSnackBar(
                          SnackBarGenerator.getNotificationMessage(
                              'Se ha desactivado el permiso'));
                    } else if (respuesta?[0].statusCode >= 400 &&
                        respuesta?[0].statusCode <= 400) {
                      if (respuesta?[0].statusCode == 401) {
                        ScaffoldMessenger.of(context).showSnackBar(
                            SnackBarGenerator.getNotificationMessage(
                                'Ocurrió un problema con la autentificación'));
...
