...
  String iduser;
  bool _visible = false;
  bool isChecked1 = false;
  bool isChecked2 = false;
  bool isChecked3 = false;

  List<dynamic> listaRoles = ['superadmin','admin','basic'];

  String dropdownValue = 'Lomba';
  List<String> dropdownItems = ['Opción 1', 'Opción 2', 'Opción 3', 'Opción 4'];

  String orgaid = '00000000-0000-0000-0000-000000000001';
  List<dynamic> roles = [];
...
